Update services (housing, jobs), UI components, and translations

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vietnam-expat-support",
+  "name": "nha-trang-expat-support",
   "version": "0.1.0",
   "private": true,
   "scripts": {
